kubernates/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: binaybasnet/frontend:latest
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80   # Expose the service on port 80 on each node
      targetPort: 3000
      nodePort: 32000  # Choose a high-numbered port to expose on each node (e.g., 32000)
